force-app/main/default/objects/Attacker__c/Attacker__c.object-meta.xml
<CustomObject>
    <label>Attacker</label>
    <pluralLabel>Attackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Attacker Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>