force-app/main/default/objects/Attacker__c/fields/Accumulated_losses__c.field-meta.xml
<CustomField>
    <fullName>Accumulated_losses__c</fullName>
    <label>Accumulated losses</label>
    <type>Lookup</type>
    <referenceTo>AccumulatedLosse__c</referenceTo>
    <relationshipName>Attacker_Accumulated_losses</relationshipName>
</CustomField>