force-app/main/default/objects/Attacker__c/fields/Back__c.field-meta.xml
<CustomField>
    <fullName>Back__c</fullName>
    <label>Back</label>
    <type>Lookup</type>
    <referenceTo>Back__c</referenceTo>
    <relationshipName>Attacker_Back</relationshipName>
</CustomField>