force-app/main/default/objects/Attacker__c/fields/Front__c.field-meta.xml
<CustomField>
    <fullName>Front__c</fullName>
    <label>Front</label>
    <type>Lookup</type>
    <referenceTo>Front__c</referenceTo>
    <relationshipName>Attacker_Front</relationshipName>
</CustomField>