force-app/main/default/objects/Attacker__c/fields/Losses__c.field-meta.xml
<CustomField>
    <fullName>Losses__c</fullName>
    <label>Losses</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>